@@ -1,3 +1,7 @@
+2003-02-18  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* actors.cc: Exploding weapons implemented.
+
 2003-02-17  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* objs/chunks.{cc,h},etc:  find_door() speeds up pathfinding.
